--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cs1.css">
+    <link rel="stylesheet" href="style.css">
     <title>smey</title>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;1,900&display=swap" rel="stylesheet">
     
